--- a/100-days-css/day-1/index.css
+++ b/100-days-css/day-1/index.css
@@ -34,7 +34,7 @@
   z-index: -1;
   top: 8.8rem;
   left: -0.1rem;
-  width: 1.6rem;
+  width: 1.5rem;
   height: 3rem;
   border-radius: 50% 0.2rem 0.2rem 0.2rem;
   transform: rotate(50deg);
@@ -57,26 +57,26 @@
 
 .numbers .number {
   color: #fff;
-  width: 7rem;
-  height: 7rem;
+  width: 4.5rem;
+  height: 4.5rem;
   border-radius: 50%;
-  background-color: #fff;
   font-family: "Hanken Grotesk", sans-serif;
   box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.3);
+  border: 1.5rem solid white;
 }
 .numbers .zero-one {
   position: absolute;
   z-index: 10;
-  top: 9rem;
+  top: 8.7rem;
   left: 1.8rem;
 }
 .numbers .zero-two {
   position: absolute;
-  top: 9rem;
+  top: 8.7rem;
   left: 8rem;
 }
 
-.numbers .number span {
+/* .numbers .number span {
   position: relative;
   color: #fff;
   background: #4ec6ca;
@@ -86,7 +86,7 @@
   left: 1.8rem;
   top: 1.8rem;
   display: inline-block;
-}
+} */
 
 .bg-text {
   font-size: 6rem;
